<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="IOExpantionMessageErrorEx_t" Id="{4521a644-3825-48a5-b917-97d2d4d81dc4}">
    <Declaration><![CDATA[TYPE IOExpantionMessageErrorEx_t :
STRUCT
	isErrorActive : BOOL := FALSE; // a variable to attach to primitiveWatchdogHandler
	errorMessageCallback : BOOL := FALSE; // callback for IOExpantionHandler_t
	clearMessageCallback : BOOL := FALSE; // callback for IOExpantionHandler_t
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>